Align demo themes with VS Code Modern and remove shared defaults

--- a/arbercharts-demo/src/main/resources/themes/FlatDarkLaf.properties
+++ b/arbercharts-demo/src/main/resources/themes/FlatDarkLaf.properties
@@ -1,188 +1,153 @@
-# =============================================================================
-# ArberCharts Demo - FlatLaf Dark Theme (VS Code Modern Dark Aligned)
-# Inspired by: VS Code Modern Dark
-# =============================================================================
+# VS Code Default Dark Modern (official palette mapping)
+# Source: microsoft/vscode extensions/theme-defaults/themes/dark_modern.json
 
-# -----------------------------------------------------------------------------
-# Core Colors
-# -----------------------------------------------------------------------------
-@background = #1E1E1E
+@background = #1F1F1F
+@surface = #181818
 @foreground = #CCCCCC
-@accentColor = #4DA3FF
-@selectionBackground = #094771
-@selectionForeground = #FFFFFF
-@disabledForeground = #7D8590
+@mutedForeground = #9D9D9D
+@disabledForeground = #868686
+@accentColor = #0078D4
+@accentHover = #026EC1
+@focusColor = #0078D4
 @borderColor = #2B2B2B
+@inputBackground = #313131
+@inputBorder = #3C3C3C
+@menuBackground = #1F1F1F
+@menuSelectionBackground = #0078D4
+@menuSelectionForeground = #FFFFFF
 
-# -----------------------------------------------------------------------------
-# Window & Title
-# -----------------------------------------------------------------------------
-TitlePane.background = #181818
-TitlePane.foreground = #CCCCCC
-TitlePane.inactiveBackground = #181818
-TitlePane.inactiveForeground = #8B949E
-TitlePane.buttonHoverBackground = #2A2A2A
-TitlePane.buttonPressedBackground = #353535
-
-# -----------------------------------------------------------------------------
-# Panel & Containers
-# -----------------------------------------------------------------------------
 Panel.background = @background
 Panel.foreground = @foreground
 
-# -----------------------------------------------------------------------------
-# Tree (Sidebar Navigation)
-# -----------------------------------------------------------------------------
-Tree.background = #181818
-Tree.foreground = @foreground
-Tree.selectionBackground = @selectionBackground
-Tree.selectionForeground = @selectionForeground
-Tree.selectionInactiveBackground = #232628
-Tree.rowHeight = 26
+TitlePane.background = @surface
+TitlePane.foreground = @foreground
+TitlePane.inactiveBackground = @surface
+TitlePane.inactiveForeground = @mutedForeground
+TitlePane.buttonHoverBackground = #2B2B2B
+TitlePane.buttonPressedBackground = #3C3C3C
 
-# -----------------------------------------------------------------------------
-# Text Components
-# -----------------------------------------------------------------------------
-TextComponent.background = #2A2A2A
+MenuBar.background = @surface
+MenuBar.foreground = @foreground
+MenuBar.borderColor = @borderColor
+
+Menu.background = @menuBackground
+Menu.foreground = @foreground
+Menu.selectionBackground = @menuSelectionBackground
+Menu.selectionForeground = @menuSelectionForeground
+
+MenuItem.background = @menuBackground
+MenuItem.foreground = @foreground
+MenuItem.selectionBackground = @menuSelectionBackground
+MenuItem.selectionForeground = @menuSelectionForeground
+MenuItem.acceleratorForeground = @mutedForeground
+
+PopupMenu.background = @menuBackground
+PopupMenu.borderColor = @inputBorder
+
+Tree.background = @surface
+Tree.foreground = @foreground
+Tree.selectionBackground = #04395E
+Tree.selectionForeground = #FFFFFF
+Tree.selectionInactiveBackground = #37373D
+Tree.selectionInactiveForeground = @foreground
+Tree.rowHeight = 24
+
+List.background = @surface
+List.foreground = @foreground
+List.selectionBackground = #04395E
+List.selectionForeground = #FFFFFF
+List.selectionInactiveBackground = #37373D
+List.selectionInactiveForeground = @foreground
+
+TextComponent.background = @inputBackground
 TextComponent.foreground = @foreground
-TextComponent.selectionBackground = @selectionBackground
-TextComponent.selectionForeground = @selectionForeground
+TextComponent.selectionBackground = #04395E
+TextComponent.selectionForeground = #FFFFFF
 TextComponent.arc = 6
 
-TextField.background = #2A2A2A
+TextField.background = @inputBackground
 TextField.foreground = @foreground
-TextField.placeholderForeground = #7D8590
-TextField.borderColor = #3C3C3C
+TextField.borderColor = @inputBorder
+TextField.placeholderForeground = #989898
+TextField.arc = 6
 
-# -----------------------------------------------------------------------------
-# Buttons
-# -----------------------------------------------------------------------------
-Button.background = #2D2D2D
-Button.foreground = @foreground
-Button.hoverBackground = #373737
-Button.pressedBackground = #3F3F3F
-Button.disabledBackground = #262626
-Button.disabledText = @disabledForeground
-Button.borderColor = #3C3C3C
-Button.arc = 6
-
-Button.default.background = #0E639C
-Button.default.foreground = #FFFFFF
-Button.default.hoverBackground = #1177BB
-
-# -----------------------------------------------------------------------------
-# ComboBox
-# -----------------------------------------------------------------------------
-ComboBox.background = #2A2A2A
+ComboBox.background = @inputBackground
 ComboBox.foreground = @foreground
-ComboBox.buttonBackground = #303030
-ComboBox.buttonArrowColor = #CCCCCC
-ComboBox.selectionBackground = @selectionBackground
+ComboBox.buttonBackground = @inputBackground
+ComboBox.buttonArrowColor = @foreground
+ComboBox.selectionBackground = #04395E
+ComboBox.selectionForeground = #FFFFFF
+ComboBox.borderColor = @inputBorder
 ComboBox.arc = 6
 
-# -----------------------------------------------------------------------------
-# Menu
-# -----------------------------------------------------------------------------
-MenuBar.background = #181818
-MenuBar.foreground = @foreground
-MenuBar.hoverBackground = #2A2A2A
+Button.background = @accentColor
+Button.foreground = #FFFFFF
+Button.hoverBackground = @accentHover
+Button.pressedBackground = #005A9E
+Button.borderColor = #FFFFFF1A
+Button.disabledBackground = #2B2B2B
+Button.disabledText = @disabledForeground
+Button.arc = 6
 
-Menu.background = #252526
-Menu.foreground = @foreground
-Menu.selectionBackground = @selectionBackground
-Menu.selectionForeground = @selectionForeground
+ToggleButton.background = #00000000
+ToggleButton.foreground = @foreground
+ToggleButton.hoverBackground = #2B2B2B
+ToggleButton.selectedBackground = #2B2B2B
+ToggleButton.selectedForeground = #FFFFFF
+ToggleButton.borderColor = @borderColor
+ToggleButton.arc = 6
 
-MenuItem.background = #252526
-MenuItem.foreground = @foreground
-MenuItem.selectionBackground = @selectionBackground
-MenuItem.selectionForeground = @selectionForeground
-MenuItem.acceleratorForeground = #8B949E
+TabbedPane.background = @surface
+TabbedPane.foreground = @mutedForeground
+TabbedPane.selectedBackground = @background
+TabbedPane.selectedForeground = #FFFFFF
+TabbedPane.underlineColor = @accentColor
+TabbedPane.hoverColor = @background
+TabbedPane.focusColor = @focusColor
+TabbedPane.tabHeight = 32
+TabbedPane.showTabSeparators = false
 
-PopupMenu.background = #252526
-PopupMenu.borderColor = #454545
-
-# -----------------------------------------------------------------------------
-# Table
-# -----------------------------------------------------------------------------
 Table.background = @background
 Table.foreground = @foreground
-Table.selectionBackground = @selectionBackground
-Table.selectionForeground = @selectionForeground
-Table.gridColor = #2D2D2D
-
-TableHeader.background = #252526
+Table.selectionBackground = #04395E
+Table.selectionForeground = #FFFFFF
+Table.gridColor = #2B2B2B
+TableHeader.background = @surface
 TableHeader.foreground = @foreground
-TableHeader.separatorColor = #3C3C3C
+TableHeader.separatorColor = @borderColor
 
-# -----------------------------------------------------------------------------
-# ToolTip
-# -----------------------------------------------------------------------------
-ToolTip.background = #252526
-ToolTip.foreground = @foreground
-ToolTip.borderColor = #454545
-
-# -----------------------------------------------------------------------------
-# TabbedPane
-# -----------------------------------------------------------------------------
-TabbedPane.background = #252526
-TabbedPane.foreground = #8B949E
-TabbedPane.selectedBackground = @background
-TabbedPane.selectedForeground = @foreground
-TabbedPane.underlineColor = @accentColor
-TabbedPane.showTabSeparators = false
-TabbedPane.tabHeight = 32
-
-# -----------------------------------------------------------------------------
-# ScrollBar
-# -----------------------------------------------------------------------------
 ScrollBar.width = 10
 ScrollBar.thumbArc = 8
-ScrollBar.thumb = #4A4A4A
-ScrollBar.thumbHover = #5A5A5A
-ScrollBar.thumbPressed = #6A6A6A
-ScrollBar.track = #1E1E1E
+ScrollBar.thumb = #5A5A5A
+ScrollBar.thumbHover = #6B6B6B
+ScrollBar.thumbPressed = #7C7C7C
+ScrollBar.track = @surface
 ScrollBar.showButtons = false
 
-# -----------------------------------------------------------------------------
-# SplitPane
-# -----------------------------------------------------------------------------
-SplitPane.dividerSize = 1
 SplitPane.background = @background
+SplitPane.dividerSize = 1
 SplitPaneDivider.style = plain
-SplitPaneDivider.gripColor = #3C3C3C
 SplitPaneDivider.gripDotCount = 0
+SplitPaneDivider.gripColor = @borderColor
 SplitPaneDivider.draggingColor = @accentColor
 
-# -----------------------------------------------------------------------------
-# Separator
-# -----------------------------------------------------------------------------
-Separator.foreground = #3C3C3C
-
-# -----------------------------------------------------------------------------
-# ProgressBar
-# -----------------------------------------------------------------------------
-ProgressBar.background = #3C3C3C
+ProgressBar.background = #2B2B2B
 ProgressBar.foreground = @accentColor
 ProgressBar.arc = 8
 
-# -----------------------------------------------------------------------------
-# Focus & Selection
-# -----------------------------------------------------------------------------
-Component.focusWidth = 1
-Component.focusColor = @accentColor
+ToolTip.background = #202020
+ToolTip.foreground = @foreground
+ToolTip.borderColor = @inputBorder
+
+Separator.foreground = @borderColor
+
 Component.borderColor = @borderColor
+Component.focusColor = @focusColor
+Component.focusWidth = 1
 Component.arc = 6
+Component.grayForeground = @mutedForeground
+Component.linkColor = @accentColor
 
-# -----------------------------------------------------------------------------
-# List
-# -----------------------------------------------------------------------------
-List.background = @background
-List.foreground = @foreground
-List.selectionBackground = @selectionBackground
-List.selectionForeground = @selectionForeground
-List.selectionInactiveBackground = #37373D
-
-# -----------------------------------------------------------------------------
-# Link
-# -----------------------------------------------------------------------------
-Component.linkColor = #4DA3FF
+CheckBox.icon.borderColor = @inputBorder
+CheckBox.icon.background = @inputBackground
+CheckBox.icon.checkmarkColor = #FFFFFF
