--- a/arbercharts-demo/src/main/resources/themes/FlatLightLaf.properties
+++ b/arbercharts-demo/src/main/resources/themes/FlatLightLaf.properties
@@ -1,189 +1,153 @@
-# =============================================================================
-# ArberCharts Demo - FlatLaf Light Theme (2026 Edition)
-# Inspired by: IntelliJ IDEA 2026 Light, VSCode Light+, GitHub Light
-# =============================================================================
+# VS Code Default Light Modern (official palette mapping)
+# Source: microsoft/vscode extensions/theme-defaults/themes/light_modern.json
 
-# -----------------------------------------------------------------------------
-# Core Colors
-# -----------------------------------------------------------------------------
 @background = #FFFFFF
-@foreground = #24292F
-@accentColor = #0969DA
-@selectionBackground = #DDF4FF
-@selectionForeground = #24292F
-@disabledForeground = #8C959F
-@borderColor = #D0D7DE
+@surface = #F8F8F8
+@foreground = #3B3B3B
+@mutedForeground = #616161
+@disabledForeground = #9F9F9F
+@accentColor = #005FB8
+@accentHover = #0258A8
+@focusColor = #005FB8
+@borderColor = #E5E5E5
+@inputBackground = #FFFFFF
+@inputBorder = #CECECE
+@menuBackground = #FFFFFF
+@menuSelectionBackground = #005FB8
+@menuSelectionForeground = #FFFFFF
 
-# -----------------------------------------------------------------------------
-# Window & Title
-# -----------------------------------------------------------------------------
-TitlePane.background = #F6F8FA
-TitlePane.foreground = @foreground
-TitlePane.inactiveBackground = #F6F8FA
-TitlePane.inactiveForeground = #656D76
-TitlePane.buttonHoverBackground = #EAEEF2
-TitlePane.buttonPressedBackground = #D0D7DE
-
-# -----------------------------------------------------------------------------
-# Panel & Containers
-# -----------------------------------------------------------------------------
 Panel.background = @background
 Panel.foreground = @foreground
 
-# -----------------------------------------------------------------------------
-# Tree (Sidebar Navigation)
-# -----------------------------------------------------------------------------
-Tree.background = #F6F8FA
-Tree.foreground = @foreground
-Tree.selectionBackground = @selectionBackground
-Tree.selectionForeground = @selectionForeground
-Tree.selectionInactiveBackground = #EAEEF2
-Tree.rowHeight = 26
+TitlePane.background = @surface
+TitlePane.foreground = @foreground
+TitlePane.inactiveBackground = @surface
+TitlePane.inactiveForeground = @mutedForeground
+TitlePane.buttonHoverBackground = #E8E8E8
+TitlePane.buttonPressedBackground = #DDDDDD
 
-# -----------------------------------------------------------------------------
-# Text Components
-# -----------------------------------------------------------------------------
-TextComponent.background = @background
+MenuBar.background = @surface
+MenuBar.foreground = @foreground
+MenuBar.borderColor = @borderColor
+
+Menu.background = @menuBackground
+Menu.foreground = @foreground
+Menu.selectionBackground = @menuSelectionBackground
+Menu.selectionForeground = @menuSelectionForeground
+
+MenuItem.background = @menuBackground
+MenuItem.foreground = @foreground
+MenuItem.selectionBackground = @menuSelectionBackground
+MenuItem.selectionForeground = @menuSelectionForeground
+MenuItem.acceleratorForeground = @mutedForeground
+
+PopupMenu.background = @menuBackground
+PopupMenu.borderColor = @inputBorder
+
+Tree.background = @surface
+Tree.foreground = @foreground
+Tree.selectionBackground = #ADD6FF
+Tree.selectionForeground = #000000
+Tree.selectionInactiveBackground = #E8E8E8
+Tree.selectionInactiveForeground = @foreground
+Tree.rowHeight = 24
+
+List.background = @surface
+List.foreground = @foreground
+List.selectionBackground = #ADD6FF
+List.selectionForeground = #000000
+List.selectionInactiveBackground = #E8E8E8
+List.selectionInactiveForeground = @foreground
+
+TextComponent.background = @inputBackground
 TextComponent.foreground = @foreground
-TextComponent.selectionBackground = @selectionBackground
-TextComponent.selectionForeground = @selectionForeground
+TextComponent.selectionBackground = #ADD6FF
+TextComponent.selectionForeground = #000000
 TextComponent.arc = 6
 
-TextField.background = @background
+TextField.background = @inputBackground
 TextField.foreground = @foreground
-TextField.placeholderForeground = #8C959F
-TextField.borderColor = @borderColor
+TextField.borderColor = @inputBorder
+TextField.placeholderForeground = #8A8A8A
+TextField.arc = 6
 
-# -----------------------------------------------------------------------------
-# Buttons
-# -----------------------------------------------------------------------------
-Button.background = #F6F8FA
-Button.foreground = @foreground
-Button.hoverBackground = #EAEEF2
-Button.pressedBackground = #D0D7DE
-Button.disabledBackground = #F6F8FA
-Button.disabledText = @disabledForeground
-Button.borderColor = @borderColor
-Button.arc = 6
-
-Button.default.background = #1F883D
-Button.default.foreground = #FFFFFF
-Button.default.hoverBackground = #2C974B
-
-# -----------------------------------------------------------------------------
-# ComboBox
-# -----------------------------------------------------------------------------
-ComboBox.background = @background
+ComboBox.background = @inputBackground
 ComboBox.foreground = @foreground
-ComboBox.buttonBackground = #F6F8FA
-ComboBox.buttonArrowColor = #656D76
-ComboBox.selectionBackground = @selectionBackground
+ComboBox.buttonBackground = @inputBackground
+ComboBox.buttonArrowColor = @foreground
+ComboBox.selectionBackground = #ADD6FF
+ComboBox.selectionForeground = #000000
+ComboBox.borderColor = @inputBorder
 ComboBox.arc = 6
 
-# -----------------------------------------------------------------------------
-# Menu
-# -----------------------------------------------------------------------------
-MenuBar.background = #F6F8FA
-MenuBar.foreground = @foreground
-MenuBar.hoverBackground = #EAEEF2
+Button.background = @accentColor
+Button.foreground = #FFFFFF
+Button.hoverBackground = @accentHover
+Button.pressedBackground = #044F9E
+Button.borderColor = #FFFFFF1A
+Button.disabledBackground = #E5E5E5
+Button.disabledText = @disabledForeground
+Button.arc = 6
 
-Menu.background = @background
-Menu.foreground = @foreground
-Menu.selectionBackground = @selectionBackground
-Menu.selectionForeground = @selectionForeground
+ToggleButton.background = #00000000
+ToggleButton.foreground = @foreground
+ToggleButton.hoverBackground = #E8E8E8
+ToggleButton.selectedBackground = #E8E8E8
+ToggleButton.selectedForeground = #000000
+ToggleButton.borderColor = @borderColor
+ToggleButton.arc = 6
 
-MenuItem.background = @background
-MenuItem.foreground = @foreground
-MenuItem.selectionBackground = @selectionBackground
-MenuItem.selectionForeground = @selectionForeground
-MenuItem.acceleratorForeground = #656D76
+TabbedPane.background = @surface
+TabbedPane.foreground = @mutedForeground
+TabbedPane.selectedBackground = @background
+TabbedPane.selectedForeground = #000000
+TabbedPane.underlineColor = @accentColor
+TabbedPane.hoverColor = @surface
+TabbedPane.focusColor = @focusColor
+TabbedPane.tabHeight = 32
+TabbedPane.showTabSeparators = false
 
-PopupMenu.background = @background
-PopupMenu.borderColor = @borderColor
-
-# -----------------------------------------------------------------------------
-# Table
-# -----------------------------------------------------------------------------
 Table.background = @background
 Table.foreground = @foreground
-Table.selectionBackground = @selectionBackground
-Table.selectionForeground = @selectionForeground
-Table.gridColor = #EAEEF2
-
-TableHeader.background = #F6F8FA
+Table.selectionBackground = #ADD6FF
+Table.selectionForeground = #000000
+Table.gridColor = #EEEEEE
+TableHeader.background = @surface
 TableHeader.foreground = @foreground
 TableHeader.separatorColor = @borderColor
 
-# -----------------------------------------------------------------------------
-# ToolTip
-# -----------------------------------------------------------------------------
-ToolTip.background = #F6F8FA
-ToolTip.foreground = @foreground
-ToolTip.borderColor = @borderColor
-
-# -----------------------------------------------------------------------------
-# TabbedPane
-# -----------------------------------------------------------------------------
-TabbedPane.background = #F6F8FA
-TabbedPane.foreground = #656D76
-TabbedPane.selectedBackground = @background
-TabbedPane.selectedForeground = @foreground
-TabbedPane.underlineColor = @accentColor
-TabbedPane.showTabSeparators = false
-TabbedPane.tabHeight = 32
-
-# -----------------------------------------------------------------------------
-# ScrollBar
-# -----------------------------------------------------------------------------
 ScrollBar.width = 10
 ScrollBar.thumbArc = 8
-ScrollBar.thumb = #C8CDD2
-ScrollBar.thumbHover = #AFB8C1
-ScrollBar.thumbPressed = #8C959F
-ScrollBar.track = #F6F8FA
+ScrollBar.thumb = #C6C6C6
+ScrollBar.thumbHover = #B8B8B8
+ScrollBar.thumbPressed = #A6A6A6
+ScrollBar.track = @surface
 ScrollBar.showButtons = false
 
-# -----------------------------------------------------------------------------
-# SplitPane
-# -----------------------------------------------------------------------------
-SplitPane.dividerSize = 1
 SplitPane.background = @background
+SplitPane.dividerSize = 1
 SplitPaneDivider.style = plain
-SplitPaneDivider.gripColor = @borderColor
 SplitPaneDivider.gripDotCount = 0
+SplitPaneDivider.gripColor = @borderColor
 SplitPaneDivider.draggingColor = @accentColor
 
-# -----------------------------------------------------------------------------
-# Separator
-# -----------------------------------------------------------------------------
-Separator.foreground = @borderColor
-
-# -----------------------------------------------------------------------------
-# ProgressBar
-# -----------------------------------------------------------------------------
-ProgressBar.background = #EAEEF2
+ProgressBar.background = #E5E5E5
 ProgressBar.foreground = @accentColor
 ProgressBar.arc = 8
 
-# -----------------------------------------------------------------------------
-# Focus & Selection
-# -----------------------------------------------------------------------------
-Component.focusWidth = 1
-Component.focusColor = @accentColor
+ToolTip.background = #F3F3F3
+ToolTip.foreground = @foreground
+ToolTip.borderColor = @inputBorder
+
+Separator.foreground = @borderColor
+
 Component.borderColor = @borderColor
+Component.focusColor = @focusColor
+Component.focusWidth = 1
 Component.arc = 6
+Component.grayForeground = @mutedForeground
+Component.linkColor = @accentColor
 
-# -----------------------------------------------------------------------------
-# List
-# -----------------------------------------------------------------------------
-List.background = @background
-List.foreground = @foreground
-List.selectionBackground = @selectionBackground
-List.selectionForeground = @selectionForeground
-List.selectionInactiveBackground = #EAEEF2
-
-# -----------------------------------------------------------------------------
-# Link
-# -----------------------------------------------------------------------------
-Component.linkColor = #0969DA
-
+CheckBox.icon.borderColor = @inputBorder
+CheckBox.icon.background = @inputBackground
+CheckBox.icon.checkmarkColor = #FFFFFF
