Switch demo theme palette to IntelliJ-style 2026 colors

--- a/arbercharts-demo/src/main/resources/themes/FlatDarkLaf.properties
+++ b/arbercharts-demo/src/main/resources/themes/FlatDarkLaf.properties
@@ -1,20 +1,19 @@
-# VS Code Default Dark Modern (official palette mapping)
-# Source: microsoft/vscode extensions/theme-defaults/themes/dark_modern.json
+# IntelliJ 2026 style dark (New UI inspired)
 
-@background = #1F1F1F
-@surface = #181818
-@foreground = #CCCCCC
-@mutedForeground = #9D9D9D
-@disabledForeground = #868686
-@accentColor = #0078D4
-@accentHover = #026EC1
-@focusColor = #0078D4
-@borderColor = #2B2B2B
-@inputBackground = #313131
-@inputBorder = #3C3C3C
-@menuBackground = #1F1F1F
-@menuSelectionBackground = #0078D4
-@menuSelectionForeground = #FFFFFF
+@background = #2B2D30
+@surface = #1E1F22
+@surfaceAlt = #25272B
+@foreground = #DFE1E5
+@mutedForeground = #A8ADBD
+@disabledForeground = #7B808A
+@accentColor = #3574F0
+@accentHover = #4A82F7
+@focusColor = #4C89FF
+@borderColor = #3C3F45
+@inputBackground = #2B2D30
+@inputBorder = #454A54
+@selectionBackground = #214283
+@selectionForeground = #FFFFFF
 
 Panel.background = @background
 Panel.foreground = @foreground
@@ -23,104 +22,109 @@ TitlePane.background = @surface
 TitlePane.foreground = @foreground
 TitlePane.inactiveBackground = @surface
 TitlePane.inactiveForeground = @mutedForeground
-TitlePane.buttonHoverBackground = #2B2B2B
-TitlePane.buttonPressedBackground = #3C3C3C
+TitlePane.buttonHoverBackground = #2F3136
+TitlePane.buttonPressedBackground = #3A3D44
 
 MenuBar.background = @surface
 MenuBar.foreground = @foreground
 MenuBar.borderColor = @borderColor
 
-Menu.background = @menuBackground
+Menu.background = @surfaceAlt
 Menu.foreground = @foreground
-Menu.selectionBackground = @menuSelectionBackground
-Menu.selectionForeground = @menuSelectionForeground
+Menu.selectionBackground = @selectionBackground
+Menu.selectionForeground = @selectionForeground
 
-MenuItem.background = @menuBackground
+MenuItem.background = @surfaceAlt
 MenuItem.foreground = @foreground
-MenuItem.selectionBackground = @menuSelectionBackground
-MenuItem.selectionForeground = @menuSelectionForeground
+MenuItem.selectionBackground = @selectionBackground
+MenuItem.selectionForeground = @selectionForeground
 MenuItem.acceleratorForeground = @mutedForeground
 
-PopupMenu.background = @menuBackground
+PopupMenu.background = @surfaceAlt
 PopupMenu.borderColor = @inputBorder
 
 Tree.background = @surface
 Tree.foreground = @foreground
-Tree.selectionBackground = #04395E
-Tree.selectionForeground = #FFFFFF
-Tree.selectionInactiveBackground = #37373D
+Tree.selectionBackground = @selectionBackground
+Tree.selectionForeground = @selectionForeground
+Tree.selectionInactiveBackground = #3A3D44
 Tree.selectionInactiveForeground = @foreground
 Tree.rowHeight = 24
 
 List.background = @surface
 List.foreground = @foreground
-List.selectionBackground = #04395E
-List.selectionForeground = #FFFFFF
-List.selectionInactiveBackground = #37373D
+List.selectionBackground = @selectionBackground
+List.selectionForeground = @selectionForeground
+List.selectionInactiveBackground = #3A3D44
 List.selectionInactiveForeground = @foreground
 
 TextComponent.background = @inputBackground
 TextComponent.foreground = @foreground
-TextComponent.selectionBackground = #04395E
-TextComponent.selectionForeground = #FFFFFF
+TextComponent.selectionBackground = @selectionBackground
+TextComponent.selectionForeground = @selectionForeground
 TextComponent.arc = 6
 
 TextField.background = @inputBackground
 TextField.foreground = @foreground
 TextField.borderColor = @inputBorder
-TextField.placeholderForeground = #989898
+TextField.placeholderForeground = #8E95A3
 TextField.arc = 6
 
 ComboBox.background = @inputBackground
 ComboBox.foreground = @foreground
 ComboBox.buttonBackground = @inputBackground
 ComboBox.buttonArrowColor = @foreground
-ComboBox.selectionBackground = #04395E
-ComboBox.selectionForeground = #FFFFFF
+ComboBox.selectionBackground = @selectionBackground
+ComboBox.selectionForeground = @selectionForeground
 ComboBox.borderColor = @inputBorder
 ComboBox.arc = 6
 
-Button.background = @accentColor
-Button.foreground = #FFFFFF
-Button.hoverBackground = @accentHover
-Button.pressedBackground = #005A9E
-Button.borderColor = #FFFFFF1A
-Button.disabledBackground = #2B2B2B
+Button.background = #3B4048
+Button.foreground = @foreground
+Button.hoverBackground = #454B55
+Button.pressedBackground = #505763
+Button.borderColor = @borderColor
+Button.disabledBackground = #2F3136
 Button.disabledText = @disabledForeground
 Button.arc = 6
 
+Button.default.background = @accentColor
+Button.default.foreground = #FFFFFF
+Button.default.hoverBackground = @accentHover
+Button.default.pressedBackground = #2C62CC
+
 ToggleButton.background = #00000000
 ToggleButton.foreground = @foreground
-ToggleButton.hoverBackground = #2B2B2B
-ToggleButton.selectedBackground = #2B2B2B
-ToggleButton.selectedForeground = #FFFFFF
+ToggleButton.hoverBackground = #2F3136
+ToggleButton.selectedBackground = #3A3D44
+ToggleButton.selectedForeground = @selectionForeground
 ToggleButton.borderColor = @borderColor
 ToggleButton.arc = 6
 
 TabbedPane.background = @surface
 TabbedPane.foreground = @mutedForeground
 TabbedPane.selectedBackground = @background
-TabbedPane.selectedForeground = #FFFFFF
+TabbedPane.selectedForeground = @foreground
 TabbedPane.underlineColor = @accentColor
-TabbedPane.hoverColor = @background
+TabbedPane.hoverColor = #32353B
 TabbedPane.focusColor = @focusColor
 TabbedPane.tabHeight = 32
 TabbedPane.showTabSeparators = false
 
 Table.background = @background
 Table.foreground = @foreground
-Table.selectionBackground = #04395E
-Table.selectionForeground = #FFFFFF
-Table.gridColor = #2B2B2B
+Table.selectionBackground = @selectionBackground
+Table.selectionForeground = @selectionForeground
+Table.gridColor = #3A3D44
 TableHeader.background = @surface
 TableHeader.foreground = @foreground
 TableHeader.separatorColor = @borderColor
 
 ScrollBar.width = 10
 ScrollBar.thumbArc = 8
-ScrollBar.thumb = #5A5A5A
-ScrollBar.thumbHover = #6B6B6B
-ScrollBar.thumbPressed = #7C7C7C
+ScrollBar.thumb = #5B6270
+ScrollBar.thumbHover = #697181
+ScrollBar.thumbPressed = #778093
 ScrollBar.track = @surface
 ScrollBar.showButtons = false
 
@@ -131,11 +135,11 @@ SplitPaneDivider.gripDotCount = 0
 SplitPaneDivider.gripColor = @borderColor
 SplitPaneDivider.draggingColor = @accentColor
 
-ProgressBar.background = #2B2B2B
+ProgressBar.background = #3A3D44
 ProgressBar.foreground = @accentColor
 ProgressBar.arc = 8
 
-ToolTip.background = #202020
+ToolTip.background = #3A3D44
 ToolTip.foreground = @foreground
 ToolTip.borderColor = @inputBorder
 
