--- a/arbercharts-demo/src/main/resources/themes/charts.properties
+++ b/arbercharts-demo/src/main/resources/themes/charts.properties
@@ -1,42 +1,41 @@
-# Chart-level defaults for the Swing demo (modern UI tuning)
-Chart.axis.label.fontScale=0.92
+# Chart-level defaults for the Swing demo
+Chart.axis.label.fontScale=0.98
 Chart.axis.label.bold=false
 Chart.tooltip.fontScale=1.0
-Chart.crosshair.label.fontScale=0.9
-Chart.tooltip.background.alpha=0.92
-Chart.tooltip.border.alpha=0.65
+Chart.crosshair.label.fontScale=0.92
+Chart.tooltip.background.alpha=0.94
+Chart.tooltip.border.alpha=0.68
 Chart.legend.position=TOP_CENTER
 Chart.legend.style=swing
 Chart.legend.compact=true
 Chart.legend.showValues=false
-Chart.legend.fontScale=0.86
+Chart.legend.fontScale=0.9
 Chart.legend.padding=6
 Chart.legend.iconSize=7
-Chart.legend.background.alpha=0.66
-Chart.legend.border.alpha=0.22
-Chart.legend.background.brightness=1.05
+Chart.legend.background.alpha=0.72
+Chart.legend.border.alpha=0.30
+Chart.legend.background.brightness=1.0
 
-# Demo chart palette (strictly from resources/themes)
-# VS Code Modern Dark-aligned
-Demo.chart.dark.background=#1F1F1F
-Demo.chart.dark.foreground=#CCCCCC
-Demo.chart.dark.grid=#343B43
-Demo.chart.dark.axis=#B7C5D3
-Demo.chart.dark.accent=#4DA3FF
-Demo.chart.dark.series1=#4DA3FF
-Demo.chart.dark.series2=#4EC9B0
-Demo.chart.dark.series3=#569CD6
-Demo.chart.dark.series4=#9CDCFE
-Demo.chart.dark.series5=#3FB950
+# IntelliJ 2026 style dark chart palette
+Demo.chart.dark.background=#2B2D30
+Demo.chart.dark.foreground=#DFE1E5
+Demo.chart.dark.grid=#3D4148
+Demo.chart.dark.axis=#C5CCD9
+Demo.chart.dark.accent=#3574F0
+Demo.chart.dark.series1=#4C89FF
+Demo.chart.dark.series2=#56D4C2
+Demo.chart.dark.series3=#F6BD60
+Demo.chart.dark.series4=#C792EA
+Demo.chart.dark.series5=#FF7A90
 
-# Light fallback
-Demo.chart.light.background=#FFFFFF
-Demo.chart.light.foreground=#24292F
-Demo.chart.light.grid=#DDE3EA
-Demo.chart.light.axis=#57606A
-Demo.chart.light.accent=#0969DA
-Demo.chart.light.series1=#0969DA
-Demo.chart.light.series2=#1F883D
-Demo.chart.light.series3=#AF4DC0
-Demo.chart.light.series4=#7C3AED
-Demo.chart.light.series5=#276EF1
+# IntelliJ 2026 style light chart palette
+Demo.chart.light.background=#F5F7FA
+Demo.chart.light.foreground=#1F2329
+Demo.chart.light.grid=#D9DFE8
+Demo.chart.light.axis=#566074
+Demo.chart.light.accent=#3574F0
+Demo.chart.light.series1=#3574F0
+Demo.chart.light.series2=#0F9D8A
+Demo.chart.light.series3=#D0891E
+Demo.chart.light.series4=#8B5AC9
+Demo.chart.light.series5=#D64F6B
