--- a/arbercharts-demo/src/main/resources/themes/FlatLightLaf.properties
+++ b/arbercharts-demo/src/main/resources/themes/FlatLightLaf.properties
@@ -1,20 +1,19 @@
-# VS Code Default Light Modern (official palette mapping)
-# Source: microsoft/vscode extensions/theme-defaults/themes/light_modern.json
+# IntelliJ 2026 style light (New UI inspired)
 
-@background = #FFFFFF
-@surface = #F8F8F8
-@foreground = #3B3B3B
-@mutedForeground = #616161
-@disabledForeground = #9F9F9F
-@accentColor = #005FB8
-@accentHover = #0258A8
-@focusColor = #005FB8
-@borderColor = #E5E5E5
+@background = #F5F7FA
+@surface = #EBEEF3
+@surfaceAlt = #FFFFFF
+@foreground = #1F2329
+@mutedForeground = #5F6773
+@disabledForeground = #98A0AD
+@accentColor = #3574F0
+@accentHover = #4A82F7
+@focusColor = #3574F0
+@borderColor = #D3D8E0
 @inputBackground = #FFFFFF
-@inputBorder = #CECECE
-@menuBackground = #FFFFFF
-@menuSelectionBackground = #005FB8
-@menuSelectionForeground = #FFFFFF
+@inputBorder = #C9CFD8
+@selectionBackground = #D7E7FF
+@selectionForeground = #0F1F3A
 
 Panel.background = @background
 Panel.foreground = @foreground
@@ -23,104 +22,109 @@ TitlePane.background = @surface
 TitlePane.foreground = @foreground
 TitlePane.inactiveBackground = @surface
 TitlePane.inactiveForeground = @mutedForeground
-TitlePane.buttonHoverBackground = #E8E8E8
-TitlePane.buttonPressedBackground = #DDDDDD
+TitlePane.buttonHoverBackground = #DCE2EA
+TitlePane.buttonPressedBackground = #CED5DF
 
 MenuBar.background = @surface
 MenuBar.foreground = @foreground
 MenuBar.borderColor = @borderColor
 
-Menu.background = @menuBackground
+Menu.background = @surfaceAlt
 Menu.foreground = @foreground
-Menu.selectionBackground = @menuSelectionBackground
-Menu.selectionForeground = @menuSelectionForeground
+Menu.selectionBackground = @selectionBackground
+Menu.selectionForeground = @selectionForeground
 
-MenuItem.background = @menuBackground
+MenuItem.background = @surfaceAlt
 MenuItem.foreground = @foreground
-MenuItem.selectionBackground = @menuSelectionBackground
-MenuItem.selectionForeground = @menuSelectionForeground
+MenuItem.selectionBackground = @selectionBackground
+MenuItem.selectionForeground = @selectionForeground
 MenuItem.acceleratorForeground = @mutedForeground
 
-PopupMenu.background = @menuBackground
+PopupMenu.background = @surfaceAlt
 PopupMenu.borderColor = @inputBorder
 
 Tree.background = @surface
 Tree.foreground = @foreground
-Tree.selectionBackground = #ADD6FF
-Tree.selectionForeground = #000000
-Tree.selectionInactiveBackground = #E8E8E8
+Tree.selectionBackground = @selectionBackground
+Tree.selectionForeground = @selectionForeground
+Tree.selectionInactiveBackground = #E3E8F0
 Tree.selectionInactiveForeground = @foreground
 Tree.rowHeight = 24
 
 List.background = @surface
 List.foreground = @foreground
-List.selectionBackground = #ADD6FF
-List.selectionForeground = #000000
-List.selectionInactiveBackground = #E8E8E8
+List.selectionBackground = @selectionBackground
+List.selectionForeground = @selectionForeground
+List.selectionInactiveBackground = #E3E8F0
 List.selectionInactiveForeground = @foreground
 
 TextComponent.background = @inputBackground
 TextComponent.foreground = @foreground
-TextComponent.selectionBackground = #ADD6FF
-TextComponent.selectionForeground = #000000
+TextComponent.selectionBackground = @selectionBackground
+TextComponent.selectionForeground = @selectionForeground
 TextComponent.arc = 6
 
 TextField.background = @inputBackground
 TextField.foreground = @foreground
 TextField.borderColor = @inputBorder
-TextField.placeholderForeground = #8A8A8A
+TextField.placeholderForeground = #8B94A3
 TextField.arc = 6
 
 ComboBox.background = @inputBackground
 ComboBox.foreground = @foreground
 ComboBox.buttonBackground = @inputBackground
 ComboBox.buttonArrowColor = @foreground
-ComboBox.selectionBackground = #ADD6FF
-ComboBox.selectionForeground = #000000
+ComboBox.selectionBackground = @selectionBackground
+ComboBox.selectionForeground = @selectionForeground
 ComboBox.borderColor = @inputBorder
 ComboBox.arc = 6
 
-Button.background = @accentColor
-Button.foreground = #FFFFFF
-Button.hoverBackground = @accentHover
-Button.pressedBackground = #044F9E
-Button.borderColor = #FFFFFF1A
-Button.disabledBackground = #E5E5E5
+Button.background = #E5EAF2
+Button.foreground = @foreground
+Button.hoverBackground = #D9E0EA
+Button.pressedBackground = #CED7E3
+Button.borderColor = @borderColor
+Button.disabledBackground = #EEF1F6
 Button.disabledText = @disabledForeground
 Button.arc = 6
 
+Button.default.background = @accentColor
+Button.default.foreground = #FFFFFF
+Button.default.hoverBackground = @accentHover
+Button.default.pressedBackground = #2C62CC
+
 ToggleButton.background = #00000000
 ToggleButton.foreground = @foreground
-ToggleButton.hoverBackground = #E8E8E8
-ToggleButton.selectedBackground = #E8E8E8
-ToggleButton.selectedForeground = #000000
+ToggleButton.hoverBackground = #DFE5EE
+ToggleButton.selectedBackground = #D4DCE8
+ToggleButton.selectedForeground = #0F1F3A
 ToggleButton.borderColor = @borderColor
 ToggleButton.arc = 6
 
 TabbedPane.background = @surface
 TabbedPane.foreground = @mutedForeground
 TabbedPane.selectedBackground = @background
-TabbedPane.selectedForeground = #000000
+TabbedPane.selectedForeground = @foreground
 TabbedPane.underlineColor = @accentColor
-TabbedPane.hoverColor = @surface
+TabbedPane.hoverColor = #E2E7EF
 TabbedPane.focusColor = @focusColor
 TabbedPane.tabHeight = 32
 TabbedPane.showTabSeparators = false
 
 Table.background = @background
 Table.foreground = @foreground
-Table.selectionBackground = #ADD6FF
-Table.selectionForeground = #000000
-Table.gridColor = #EEEEEE
+Table.selectionBackground = @selectionBackground
+Table.selectionForeground = @selectionForeground
+Table.gridColor = #E0E5ED
 TableHeader.background = @surface
 TableHeader.foreground = @foreground
 TableHeader.separatorColor = @borderColor
 
 ScrollBar.width = 10
 ScrollBar.thumbArc = 8
-ScrollBar.thumb = #C6C6C6
-ScrollBar.thumbHover = #B8B8B8
-ScrollBar.thumbPressed = #A6A6A6
+ScrollBar.thumb = #B9C1CD
+ScrollBar.thumbHover = #A8B1BF
+ScrollBar.thumbPressed = #959FB0
 ScrollBar.track = @surface
 ScrollBar.showButtons = false
 
@@ -131,11 +135,11 @@ SplitPaneDivider.gripDotCount = 0
 SplitPaneDivider.gripColor = @borderColor
 SplitPaneDivider.draggingColor = @accentColor
 
-ProgressBar.background = #E5E5E5
+ProgressBar.background = #DEE4EE
 ProgressBar.foreground = @accentColor
 ProgressBar.arc = 8
 
-ToolTip.background = #F3F3F3
+ToolTip.background = #FFFFFF
 ToolTip.foreground = @foreground
 ToolTip.borderColor = @inputBorder
 
