Enhance circular demo colors and premium radar/polar datasets

--- a/arbercharts-demo/src/main/resources/themes/charts.properties
+++ b/arbercharts-demo/src/main/resources/themes/charts.properties
@@ -22,11 +22,11 @@ Demo.chart.dark.foreground=#DFE1E5
 Demo.chart.dark.grid=#3D4148
 Demo.chart.dark.axis=#C5CCD9
 Demo.chart.dark.accent=#3574F0
-Demo.chart.dark.series1=#4C89FF
-Demo.chart.dark.series2=#56D4C2
-Demo.chart.dark.series3=#F6BD60
-Demo.chart.dark.series4=#C792EA
-Demo.chart.dark.series5=#FF7A90
+Demo.chart.dark.series1=#6AA9FF
+Demo.chart.dark.series2=#32D7C6
+Demo.chart.dark.series3=#FFC857
+Demo.chart.dark.series4=#B89CFF
+Demo.chart.dark.series5=#FF6F91
 
 # IntelliJ 2026 style light chart palette
 Demo.chart.light.background=#F5F7FA
@@ -34,8 +34,8 @@ Demo.chart.light.foreground=#1F2329
 Demo.chart.light.grid=#D9DFE8
 Demo.chart.light.axis=#566074
 Demo.chart.light.accent=#3574F0
-Demo.chart.light.series1=#3574F0
-Demo.chart.light.series2=#0F9D8A
-Demo.chart.light.series3=#D0891E
-Demo.chart.light.series4=#8B5AC9
-Demo.chart.light.series5=#D64F6B
+Demo.chart.light.series1=#2F6FEA
+Demo.chart.light.series2=#0DAF98
+Demo.chart.light.series3=#D89316
+Demo.chart.light.series4=#7C52D8
+Demo.chart.light.series5=#D93F6E
