Force ultra-compact legend sizing in demo theme

--- a/arbercharts-demo/src/main/resources/themes/charts.properties
+++ b/arbercharts-demo/src/main/resources/themes/charts.properties
@@ -9,12 +9,21 @@ Chart.legend.position=TOP_CENTER
 Chart.legend.style=swing
 Chart.legend.compact=true
 Chart.legend.showValues=false
-Chart.legend.fontScale=0.9
-Chart.legend.padding=6
-Chart.legend.iconSize=7
+Chart.legend.fontScale=0.76
+Chart.legend.padding=3
+Chart.legend.iconSize=5
 Chart.legend.background.alpha=0.72
 Chart.legend.border.alpha=0.30
 Chart.legend.background.brightness=1.0
+Chart.legend.dock.density=compact
+Chart.legend.dock.preferredWidth=180
+Chart.legend.dock.preferredHeight=112
+Chart.legend.dock.minWidth=140
+Chart.legend.dock.minHeight=88
+Chart.legend.dock.right.preferredWidth=190
+Chart.legend.dock.left.preferredWidth=180
+Chart.legend.dock.top.preferredHeight=98
+Chart.legend.dock.bottom.preferredHeight=98
 
 # IntelliJ 2026 style dark chart palette
 Demo.chart.dark.background=#2B2D30
