Adopt Swiss Alpine dark theme and raise chart readability

--- a/arbercharts-demo/src/main/resources/themes/charts.properties
+++ b/arbercharts-demo/src/main/resources/themes/charts.properties
@@ -1,41 +1,41 @@
 # Chart-level defaults for the Swing demo
-Chart.axis.label.fontScale=0.98
+Chart.axis.label.fontScale=1.12
 Chart.axis.label.bold=false
-Chart.tooltip.fontScale=1.0
-Chart.crosshair.label.fontScale=0.92
+Chart.tooltip.fontScale=1.02
+Chart.crosshair.label.fontScale=1.00
 Chart.tooltip.background.alpha=0.94
 Chart.tooltip.border.alpha=0.68
 Chart.legend.position=TOP_CENTER
 Chart.legend.style=swing
 Chart.legend.compact=true
 Chart.legend.showValues=false
-Chart.legend.fontScale=0.80
-Chart.legend.padding=3
-Chart.legend.iconSize=5
+Chart.legend.fontScale=0.92
+Chart.legend.padding=4
+Chart.legend.iconSize=6
 Chart.legend.background.alpha=0.72
 Chart.legend.border.alpha=0.30
 Chart.legend.background.brightness=1.0
 Chart.legend.dock.density=compact
-Chart.legend.dock.preferredWidth=184
-Chart.legend.dock.preferredHeight=110
-Chart.legend.dock.minWidth=144
-Chart.legend.dock.minHeight=90
-Chart.legend.dock.right.preferredWidth=196
-Chart.legend.dock.left.preferredWidth=184
-Chart.legend.dock.top.preferredHeight=100
-Chart.legend.dock.bottom.preferredHeight=100
+Chart.legend.dock.preferredWidth=210
+Chart.legend.dock.preferredHeight=124
+Chart.legend.dock.minWidth=164
+Chart.legend.dock.minHeight=98
+Chart.legend.dock.right.preferredWidth=224
+Chart.legend.dock.left.preferredWidth=210
+Chart.legend.dock.top.preferredHeight=112
+Chart.legend.dock.bottom.preferredHeight=112
 
-# IntelliJ 2026 style dark chart palette
-Demo.chart.dark.background=#2B2D30
-Demo.chart.dark.foreground=#DFE1E5
-Demo.chart.dark.grid=#3D4148
-Demo.chart.dark.axis=#C5CCD9
-Demo.chart.dark.accent=#3574F0
-Demo.chart.dark.series1=#6AA9FF
-Demo.chart.dark.series2=#32D7C6
-Demo.chart.dark.series3=#FFC857
-Demo.chart.dark.series4=#B89CFF
-Demo.chart.dark.series5=#FF6F91
+# Swiss Alpine dark chart palette
+Demo.chart.dark.background=#1F2329
+Demo.chart.dark.foreground=#E6EAF0
+Demo.chart.dark.grid=#3A404A
+Demo.chart.dark.axis=#C9D1DC
+Demo.chart.dark.accent=#4B8BFF
+Demo.chart.dark.series1=#7AA7FF
+Demo.chart.dark.series2=#4CD6C5
+Demo.chart.dark.series3=#FBBF24
+Demo.chart.dark.series4=#A78BFA
+Demo.chart.dark.series5=#F87171
 
 # IntelliJ 2026 style light chart palette
 Demo.chart.light.background=#F5F7FA
