--- a/arbercharts-demo/src/main/resources/themes/FlatDarkLaf.properties
+++ b/arbercharts-demo/src/main/resources/themes/FlatDarkLaf.properties
@@ -1,157 +1,292 @@
-# IntelliJ 2026 style dark (New UI inspired)
+# EWWS FlatLaf theme (Dark) - "Swiss Alpine" profile.
+#
+# This file mirrors the Light theme structure to avoid random component styling.
+# Change tokens first, then component keys.
 
-@background = #2B2D30
-@surface = #1E1F22
-@surfaceAlt = #25272B
-@foreground = #DFE1E5
-@mutedForeground = #A8ADBD
-@disabledForeground = #7B808A
-@accentColor = #3574F0
-@accentHover = #4A82F7
-@focusColor = #4C89FF
-@borderColor = #3C3F45
-@inputBackground = #2B2D30
-@inputBorder = #454A54
-@selectionBackground = #214283
-@selectionForeground = #FFFFFF
+# --- Design tokens (surfaces) ---
+@bg = #1F2329
+@surface = #2B2F36
+@surface2 = #31363F
+@surface3 = #252A33
 
-Panel.background = @background
-Panel.foreground = @foreground
+# --- Design tokens (text) ---
+@text = #E6EAF0
+@textMuted = #AAB2BD
+@textDisabled = #7E8794
 
-TitlePane.background = @surface
-TitlePane.foreground = @foreground
-TitlePane.inactiveBackground = @surface
-TitlePane.inactiveForeground = @mutedForeground
-TitlePane.buttonHoverBackground = #2F3136
-TitlePane.buttonPressedBackground = #3A3D44
+# --- Design tokens (borders/separators) ---
+@border = #3A404A
+@borderStrong = #4A525F
 
-MenuBar.background = @surface
-MenuBar.foreground = @foreground
-MenuBar.borderColor = @borderColor
+# --- Design tokens (accent/selection) ---
+@accent = #4B8BFF
+@selectionBg = #2B4A8A
+@selectionBgInactive = #2B2F36
+@selectionFg = @text
 
-Menu.background = @surfaceAlt
-Menu.foreground = @foreground
-Menu.selectionBackground = @selectionBackground
-Menu.selectionForeground = @selectionForeground
+# --- Design tokens (status) ---
+@danger = #F87171
+@success = #22C55E
+@warning = #FBBF24
+@info = #38BDF8
 
-MenuItem.background = @surfaceAlt
-MenuItem.foreground = @foreground
-MenuItem.selectionBackground = @selectionBackground
-MenuItem.selectionForeground = @selectionForeground
-MenuItem.acceleratorForeground = @mutedForeground
+# ---------------------------------------------------------------------
+# FlatLaf base variables
+# ---------------------------------------------------------------------
+@background = @bg
+@foreground = @text
+@disabledForeground = @textDisabled
+@selectionBackground = @selectionBg
+@selectionForeground = @selectionFg
+@accentColor = @accent
+@focusColor = @accent
+@separatorColor = @border
+@componentBackground = @surface
+@componentForeground = @text
 
-PopupMenu.background = @surfaceAlt
-PopupMenu.borderColor = @inputBorder
+# ---------------------------------------------------------------------
+# Global
+# ---------------------------------------------------------------------
+Panel.background = @bg
+Viewport.background = @bg
+Separator.foreground = @border
+
+ScrollPane.background = @bg
+RootPane.background = @bg
+Dialog.background = @bg
+OptionPane.background = @bg
+OptionPane.messageForeground = @text
+
+Label.foreground = @text
+Label.disabledForeground = @textDisabled
+
+Component.focusColor = @accent
+Component.borderColor = @border
+Component.disabledBorderColor = @border
+
+TitlePane.background = @bg
+TitlePane.foreground = @textMuted
+TitlePane.borderColor = @border
+
+# ---------------------------------------------------------------------
+# Menu / Toolbar
+# ---------------------------------------------------------------------
+MenuBar.background = @bg
+MenuBar.foreground = @text
+MenuBar.borderColor = @border
+
+ToolBar.background = @bg
+ToolBar.borderColor = @border
+
+PopupMenu.background = @surface
+PopupMenu.borderColor = @borderStrong
+
+Menu.background = @bg
+Menu.foreground = @text
+MenuItem.background = @bg
+MenuItem.foreground = @text
+MenuItem.selectionBackground = @selectionBg
+MenuItem.selectionForeground = @selectionFg
+
+# ---------------------------------------------------------------------
+# Buttons
+# ---------------------------------------------------------------------
+Button.background = @surface
+Button.foreground = @text
+Button.borderColor = @borderStrong
+Button.focusedBorderColor = @accent
+Button.hoverBackground = @surface2
+Button.pressedBackground = @surface3
+Button.disabledText = @textDisabled
+
+ToggleButton.background = @surface
+ToggleButton.foreground = @text
+ToggleButton.selectedBackground = @selectionBg
+ToggleButton.selectedForeground = @selectionFg
+
+# ---------------------------------------------------------------------
+# Inputs
+# ---------------------------------------------------------------------
+TextComponent.background = @surface
+TextComponent.foreground = @text
+TextComponent.caretForeground = @text
+TextComponent.inactiveForeground = @textMuted
+TextComponent.selectionBackground = @selectionBg
+TextComponent.selectionForeground = @selectionFg
+TextComponent.borderColor = @borderStrong
+TextComponent.focusedBorderColor = @accent
+TextComponent.disabledBackground = @surface3
+TextComponent.disabledForeground = @textDisabled
+TextComponent.inactiveBackground = @surface
+
+TextField.background = @surface
+TextField.foreground = @text
+TextField.caretForeground = @text
+TextField.inactiveForeground = @textMuted
+TextField.selectionBackground = @selectionBg
+TextField.selectionForeground = @text
+TextField.borderColor = @borderStrong
+TextField.focusedBorderColor = @accent
+TextField.disabledBackground = @surface3
+TextField.disabledForeground = @textDisabled
+TextField.inactiveBackground = @surface
+TextField.placeholderForeground = @textDisabled
+
+PasswordField.background = @surface
+PasswordField.foreground = @text
+PasswordField.caretForeground = @text
+PasswordField.inactiveForeground = @textMuted
+PasswordField.selectionBackground = @selectionBg
+PasswordField.selectionForeground = @text
+PasswordField.borderColor = @borderStrong
+PasswordField.focusedBorderColor = @accent
+PasswordField.disabledBackground = @surface3
+PasswordField.disabledForeground = @textDisabled
+PasswordField.inactiveBackground = @surface
+PasswordField.placeholderForeground = @textDisabled
+
+FormattedTextField.background = @surface
+FormattedTextField.foreground = @text
+FormattedTextField.caretForeground = @text
+FormattedTextField.inactiveForeground = @textMuted
+FormattedTextField.selectionBackground = @selectionBg
+FormattedTextField.selectionForeground = @text
+FormattedTextField.borderColor = @borderStrong
+FormattedTextField.focusedBorderColor = @accent
+FormattedTextField.disabledBackground = @surface3
+FormattedTextField.disabledForeground = @textDisabled
+FormattedTextField.inactiveBackground = @surface
+FormattedTextField.placeholderForeground = @textDisabled
+
+TextArea.background = @surface
+TextArea.foreground = @text
+TextArea.caretForeground = @text
+TextArea.inactiveForeground = @textMuted
+TextArea.selectionBackground = @selectionBg
+TextArea.selectionForeground = @text
+TextArea.borderColor = @borderStrong
+TextArea.focusedBorderColor = @accent
+TextArea.disabledBackground = @surface3
+TextArea.disabledForeground = @textDisabled
+
+EditorPane.background = @surface
+EditorPane.foreground = @text
+EditorPane.caretForeground = @text
+EditorPane.inactiveForeground = @textMuted
+EditorPane.selectionBackground = @selectionBg
+EditorPane.selectionForeground = @text
+
+TextPane.background = @surface
+TextPane.foreground = @text
+TextPane.caretForeground = @text
+TextPane.inactiveForeground = @textMuted
+TextPane.selectionBackground = @selectionBg
+TextPane.selectionForeground = @text
+
+ComboBox.background = @surface
+ComboBox.foreground = @text
+ComboBox.buttonBackground = @surface
+ComboBox.buttonArrowColor = @textMuted
+ComboBox.selectionBackground = @selectionBg
+ComboBox.selectionForeground = @selectionFg
+ComboBox.borderColor = @borderStrong
+ComboBox.focusedBorderColor = @accent
+
+Spinner.background = @surface
+Spinner.foreground = @text
+Spinner.buttonBackground = @surface
+Spinner.buttonArrowColor = @textMuted
+Spinner.borderColor = @borderStrong
+Spinner.focusedBorderColor = @accent
+
+# ---------------------------------------------------------------------
+# Lists / Tables / Trees
+# ---------------------------------------------------------------------
+List.background = @surface
+List.foreground = @text
+List.selectionBackground = @selectionBg
+List.selectionForeground = @selectionFg
+
+Table.background = @surface
+Table.foreground = @text
+Table.gridColor = @border
+Table.rowHeight = 26
+Table.selectionBackground = @selectionBg
+Table.selectionForeground = @selectionFg
+Table.selectionInactiveBackground = @selectionBgInactive
+Table.selectionInactiveForeground = @selectionFg
+Table.alternateRowColor = #2A2E36
+
+TableHeader.background = @bg
+TableHeader.foreground = @textMuted
+TableHeader.separatorColor = @border
+TableHeader.bottomSeparatorColor = @border
 
 Tree.background = @surface
-Tree.foreground = @foreground
-Tree.selectionBackground = @selectionBackground
-Tree.selectionForeground = @selectionForeground
-Tree.selectionInactiveBackground = #3A3D44
-Tree.selectionInactiveForeground = @foreground
-Tree.rowHeight = 24
+Tree.foreground = @text
+Tree.selectionBackground = @selectionBg
+Tree.selectionForeground = @selectionFg
+Tree.selectionInactiveBackground = @selectionBgInactive
+Tree.selectionInactiveForeground = @selectionFg
+Tree.hash = @border
+Tree.rowHeight = 28
+Tree.wideSelection = true
+Tree.paintLines = false
+Tree.showCellFocusIndicator = false
+Tree.iconTextGap = 8
+Tree.leftChildIndent = 10
+Tree.rightChildIndent = 8
+Tree.selectionArc = 8
+Tree.selectionInsets = 2,6,2,6
 
-List.background = @surface
-List.foreground = @foreground
-List.selectionBackground = @selectionBackground
-List.selectionForeground = @selectionForeground
-List.selectionInactiveBackground = #3A3D44
-List.selectionInactiveForeground = @foreground
-
-TextComponent.background = @inputBackground
-TextComponent.foreground = @foreground
-TextComponent.selectionBackground = @selectionBackground
-TextComponent.selectionForeground = @selectionForeground
-TextComponent.arc = 6
-
-TextField.background = @inputBackground
-TextField.foreground = @foreground
-TextField.borderColor = @inputBorder
-TextField.placeholderForeground = #8E95A3
-TextField.arc = 6
-
-ComboBox.background = @inputBackground
-ComboBox.foreground = @foreground
-ComboBox.buttonBackground = @inputBackground
-ComboBox.buttonArrowColor = @foreground
-ComboBox.selectionBackground = @selectionBackground
-ComboBox.selectionForeground = @selectionForeground
-ComboBox.borderColor = @inputBorder
-ComboBox.arc = 6
-
-Button.background = #3B4048
-Button.foreground = @foreground
-Button.hoverBackground = #454B55
-Button.pressedBackground = #505763
-Button.borderColor = @borderColor
-Button.disabledBackground = #2F3136
-Button.disabledText = @disabledForeground
-Button.arc = 6
-
-Button.default.background = @accentColor
-Button.default.foreground = #FFFFFF
-Button.default.hoverBackground = @accentHover
-Button.default.pressedBackground = #2C62CC
-
-ToggleButton.background = #00000000
-ToggleButton.foreground = @foreground
-ToggleButton.hoverBackground = #2F3136
-ToggleButton.selectedBackground = #3A3D44
-ToggleButton.selectedForeground = @selectionForeground
-ToggleButton.borderColor = @borderColor
-ToggleButton.arc = 6
-
+# ---------------------------------------------------------------------
+# Tabs
+# ---------------------------------------------------------------------
+TabbedPane.tabType = underlined
+TabbedPane.showTabSeparators = true
+TabbedPane.hasFullBorder = true
 TabbedPane.background = @surface
-TabbedPane.foreground = @mutedForeground
-TabbedPane.selectedBackground = @background
-TabbedPane.selectedForeground = @foreground
-TabbedPane.underlineColor = @accentColor
-TabbedPane.hoverColor = #32353B
-TabbedPane.focusColor = @focusColor
-TabbedPane.tabHeight = 32
-TabbedPane.showTabSeparators = false
+TabbedPane.tabAreaBackground = @surface
+TabbedPane.foreground = @text
+TabbedPane.selectedBackground = @surface
+TabbedPane.selectedForeground = @text
+TabbedPane.underlineColor = @accent
+TabbedPane.hoverColor = @surface2
+TabbedPane.contentAreaColor = @border
 
-Table.background = @background
-Table.foreground = @foreground
-Table.selectionBackground = @selectionBackground
-Table.selectionForeground = @selectionForeground
-Table.gridColor = #3A3D44
-TableHeader.background = @surface
-TableHeader.foreground = @foreground
-TableHeader.separatorColor = @borderColor
-
-ScrollBar.width = 10
-ScrollBar.thumbArc = 8
-ScrollBar.thumb = #5B6270
-ScrollBar.thumbHover = #697181
-ScrollBar.thumbPressed = #778093
-ScrollBar.track = @surface
-ScrollBar.showButtons = false
-
-SplitPane.background = @background
-SplitPane.dividerSize = 1
-SplitPaneDivider.style = plain
+# ---------------------------------------------------------------------
+# SplitPane
+# ---------------------------------------------------------------------
+SplitPane.background = @surface
+SplitPane.dividerSize = 8
+SplitPaneDivider.style = none
+SplitPaneDivider.background = @surface
 SplitPaneDivider.gripDotCount = 0
-SplitPaneDivider.gripColor = @borderColor
-SplitPaneDivider.draggingColor = @accentColor
+SplitPaneDivider.gripColor = #00000000
+SplitPaneDivider.oneTouchArrowColor = #00000000
+SplitPaneDivider.oneTouchHoverArrowColor = #00000000
+SplitPaneDivider.oneTouchPressedArrowColor = #00000000
 
-ProgressBar.background = #3A3D44
-ProgressBar.foreground = @accentColor
-ProgressBar.arc = 8
+# ---------------------------------------------------------------------
+# Scrollbars
+# ---------------------------------------------------------------------
+ScrollBar.track = @bg
+ScrollBar.thumb = #4A5160
+ScrollBar.thumbHover = #586172
+ScrollBar.thumbPressed = #667084
 
-ToolTip.background = #3A3D44
-ToolTip.foreground = @foreground
-ToolTip.borderColor = @inputBorder
+# ---------------------------------------------------------------------
+# Tooltips
+# ---------------------------------------------------------------------
+ToolTip.background = @surface2
+ToolTip.foreground = @text
+ToolTip.borderColor = @borderStrong
 
-Separator.foreground = @borderColor
-
-Component.borderColor = @borderColor
-Component.focusColor = @focusColor
-Component.focusWidth = 1
-Component.arc = 6
-Component.grayForeground = @mutedForeground
-Component.linkColor = @accentColor
-
-CheckBox.icon.borderColor = @inputBorder
-CheckBox.icon.background = @inputBackground
-CheckBox.icon.checkmarkColor = #FFFFFF
+# ---------------------------------------------------------------------
+# Semantic colors (optional for app code)
+# ---------------------------------------------------------------------
+Actions.Blue = @accent
+Actions.Green = @success
+Actions.Yellow = @warning
+Actions.Red = @danger
+Actions.Info = @info
