Raise axis and legend readability to enterprise baseline

--- a/arbercharts-demo/src/main/resources/themes/charts.properties
+++ b/arbercharts-demo/src/main/resources/themes/charts.properties
@@ -1,29 +1,30 @@
 # Chart-level defaults for the Swing demo
-Chart.axis.label.fontScale=1.12
+Chart.axis.label.baseSize=11.0
+Chart.axis.label.fontScale=1.20
 Chart.axis.label.bold=false
 Chart.tooltip.fontScale=1.02
-Chart.crosshair.label.fontScale=1.00
+Chart.crosshair.label.fontScale=1.08
 Chart.tooltip.background.alpha=0.94
 Chart.tooltip.border.alpha=0.68
 Chart.legend.position=TOP_CENTER
 Chart.legend.style=swing
 Chart.legend.compact=true
 Chart.legend.showValues=false
-Chart.legend.fontScale=0.92
-Chart.legend.padding=4
-Chart.legend.iconSize=6
+Chart.legend.fontScale=1.06
+Chart.legend.padding=5
+Chart.legend.iconSize=7
 Chart.legend.background.alpha=0.72
 Chart.legend.border.alpha=0.30
 Chart.legend.background.brightness=1.0
 Chart.legend.dock.density=compact
-Chart.legend.dock.preferredWidth=210
-Chart.legend.dock.preferredHeight=124
-Chart.legend.dock.minWidth=164
-Chart.legend.dock.minHeight=98
-Chart.legend.dock.right.preferredWidth=224
-Chart.legend.dock.left.preferredWidth=210
-Chart.legend.dock.top.preferredHeight=112
-Chart.legend.dock.bottom.preferredHeight=112
+Chart.legend.dock.preferredWidth=244
+Chart.legend.dock.preferredHeight=140
+Chart.legend.dock.minWidth=188
+Chart.legend.dock.minHeight=112
+Chart.legend.dock.right.preferredWidth=258
+Chart.legend.dock.left.preferredWidth=244
+Chart.legend.dock.top.preferredHeight=126
+Chart.legend.dock.bottom.preferredHeight=126
 
 # Swiss Alpine dark chart palette
 Demo.chart.dark.background=#1F2329
