Improve crosshair label readability and center marker

--- a/arbercharts-demo/src/main/resources/themes/charts.properties
+++ b/arbercharts-demo/src/main/resources/themes/charts.properties
@@ -4,6 +4,11 @@ Chart.axis.label.fontScale=1.20
 Chart.axis.label.bold=false
 Chart.tooltip.fontScale=1.02
 Chart.crosshair.label.fontScale=1.08
+Chart.crosshair.label.baseSize=11.5
+Chart.crosshair.label.paddingH=8
+Chart.crosshair.label.paddingV=4
+Chart.crosshair.label.arc=8
+Chart.crosshair.marker.size=10
 Chart.tooltip.background.alpha=0.94
 Chart.tooltip.border.alpha=0.68
 Chart.legend.position=TOP_CENTER
