Skip Central publishing for demo and starter modules

--- a/arbercharts-demo/pom.xml
+++ b/arbercharts-demo/pom.xml
@@ -102,5 +102,22 @@
                 </executions>
             </plugin>
         </plugins>
-    </build>
+</build>
+
+    <profiles>
+        <profile>
+            <id>central-release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.sonatype.central</groupId>
+                        <artifactId>central-publishing-maven-plugin</artifactId>
+                        <configuration>
+                            <skipPublishing>true</skipPublishing>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
